# Spectral2D

./: .gitignore  CMakeLists.txt  README
analysis/: TaylorGreen.py
cmake/modules/: FindFFTW.cmake
src/: Alloc.F90  Analysis.F90  CMakeLists.txt  IO.F90  Messages.F90  Parameters.F90  Random.F90  SetIC.F90  Spectral.F90  Spectral2D.F90  TimeIntegration.F90
